fix: added routing and fixed bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,1 @@
-<span class="p-float-label">
-  <input [(ngModel)]="funStr" size="100" id="float-input" type="text" pInputText>
-  <label for="float-input">Function</label>
-</span>
-<br><br>
-<span class="p-float-label p-mt-4">
-  <p-inputNumber id="float-number" [(ngModel)]="n"></p-inputNumber>
-  <label for="float-number">n</label>
-</span>
-<br><br>
-<span class="p-float-label p-mt-4">
-  <p-inputNumber id="float-number" [(ngModel)]="a"></p-inputNumber>
-  <label for="float-number">From</label>
-</span>
-<br><br>
-<span class="p-float-label p-mt-4">
-  <p-inputNumber id="float-number" [(ngModel)]="b"></p-inputNumber>
-  <label for="float-number">To</label>
-</span>
-<br><br>
-<span class="p-float-label p-mt-4">
-  <p-inputNumber id="float-number" [(ngModel)]="round"></p-inputNumber>
-  <label for="float-number">Floating point rounding</label>
-</span>
-<br><br>
-<p-button (click)="evaluateRectMin()" label="Evaluate Rect Min"></p-button>
-<br><br>
-<p-button (click)="evaluateRectMax()" label="Evaluate Rect Max"></p-button>
-<br><br>
-<p-button (click)="evaluateTrapezoid()" label="Evaluate Trapezoid"></p-button>
-<br><br>
-<p-button (click)="evaluateSimpson()" label="Evaluate Simpson"></p-button>
-<br><br>
-Values of x: {{xs}}
-<br>
-Values of function: {{values}}
-<br>
-Result is: {{result}}
-
+<router-outlet></router-outlet>
